add animation with aos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
       <section class="about-me ">
         <div class="container">
           <div class="about-me__header text-center">
-            <h2 class="heading-secondary">
+            <h2
+              class="heading-secondary"
+              data-aos="zoom-in"
+              data-aos-delay="0"
+              data-aos-duration="1000"
+            >
               Front end focused
               <span class="heading-secondary--main"
                 >With full stack experience</span
@@ -70,7 +75,13 @@
             </h2>
           </div>
           <div class="about-me__content" id="about-me">
-            <div class="about-me__about-me card">
+            <div
+              class="about-me__about-me card"
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              data-aos-offset="200"
+            >
               <h3 class="heading-tertiary">About Me</h3>
               <p class="lead">
                 Passionate front end engineer with an emphasis on modern web
@@ -84,7 +95,13 @@
                 software engineer.
               </p>
             </div>
-            <div class="about-me__skills card">
+            <div
+              class="about-me__skills card"
+              data-aos="fade-left"
+              data-aos-delay="500"
+              data-aos-duration="1000"
+              data-aos-offset="190"
+            >
               <h3 class="heading-tertiary">
                 Familiar languages
               </h3>
@@ -114,11 +131,22 @@
       </section>
       <section class="portfolio" id="portfolio">
         <div class="container">
-          <div class="portfolio__header ">
+          <div
+            class="portfolio__header "
+            data-aos="zoom-in"
+            data-aos-delay="0"
+            data-aos-duration="1000"
+          >
             <h2 class="heading-secondary ">Portfolio</h2>
           </div>
           <div class="portfolio__showcase container">
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="0"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -151,7 +179,13 @@
                 >
               </div>
             </div>
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -184,7 +218,13 @@
                 >
               </div>
             </div>
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="1000"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -217,7 +257,13 @@
                 >
               </div>
             </div>
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="0"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -250,7 +296,13 @@
                 >
               </div>
             </div>
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -283,7 +335,13 @@
                 >
               </div>
             </div>
-            <div class="portfolio__item card">
+            <div
+              class="portfolio__item card"
+              data-aos="zoom-in"
+              data-aos-delay="1000"
+              data-aos-duration="1000"
+              data-aos-offset="650"
+            >
               <a href="#" class="showcase__link">
                 <img
                   src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -322,15 +380,42 @@
       <section class="contact" id="contact">
         <div class="container card">
           <div class="contact__header">
-            <h2 class="heading-secondary ">Contact</h2>
+            <h2
+              class="heading-secondary"
+              data-aos="zoom-in"
+              data-aos-delay="0"
+              data-aos-duration="1000"
+              data-aos-offset="100"
+            >
+              Contact
+            </h2>
           </div>
-          <p class="contact__phone">
+          <p
+            class="contact__phone"
+            class="heading-secondary"
+            data-aos="zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="1000"
+            data-aos-offset="100"
+          >
             <i class="fas fa-mobile"></i> <span>(952) 686-1657</span>
           </p>
-          <p class="contact__email">
+          <p
+            class="contact__email"
+            data-aos="zoom-in"
+            data-aos-delay="1000"
+            data-aos-duration="1000"
+            data-aos-offset="100"
+          >
             <i class="fas fa-envelope"></i> <span>Suonx002@gmail.com</span>
           </p>
-          <ul class="contact__links">
+          <ul
+            class="contact__links"
+            data-aos="zoom-in"
+            data-aos-delay="1500"
+            data-aos-duration="1000"
+            data-aos-offset="100"
+          >
             <li class="contact__item">
               <a href="https://github.com/Suonx002" target="_blank"
                 ><i class="fab fa-github"></i
