add project image and link sources

--- a/index.html
+++ b/index.html
@@ -148,38 +148,43 @@
               data-aos-duration="1000"
               data-aos-offset="450"
             >
-              <a href="#" class="showcase__link">
+              <a
+                href="https://happynailsstudio2.netlify.com/"
+                class="showcase__link"
+                target="_blank"
+              >
                 <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  src="./img/nail_salon.jpg"
                   alt="showcase 1"
                   class="portfolio__img"
                 />
               </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
+              <h3 class="heading-tertiary">Happy Nails Studio 2</h3>
               <p class="extra-small">
                 HTML | Sass | Vanilla JavaScript | Webpack | Babel
               </p>
               <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
+                Happy Nails Studio 2 is a website built with plain html5 and
+                sass for a nail salon business in Lebanon, PA. The user
+                interface is very friendly for customers to view all the
+                services and book an appointment.
               </p>
               <div class="portfolio__btn">
                 <a
-                  href="https://ticketdream.netlify.com/"
+                  href="https://happynailsstudio2.netlify.com/"
                   class="btn btn--small btn--primary"
                   target="_blank"
                   >Live Demo</a
                 >
                 <a
-                  href="https://github.com/Suonx002/TicketDream"
+                  href="https://github.com/Suonx002/nail_salon"
                   class="btn btn--small btn--dark"
                   target="_blank"
                   >Source Code</a
                 >
               </div>
             </div>
+
             <div
               class="portfolio__item card"
               data-aos="zoom-in"
@@ -187,38 +192,43 @@
               data-aos-duration="1000"
               data-aos-offset="450"
             >
-              <a href="#" class="showcase__link">
+              <a
+                href="https://disneysolo.netlify.com/"
+                class="showcase__link"
+                target="_blank"
+              >
                 <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  alt="showcase 1"
+                  src="./img/disney_solo.jpg"
+                  alt="showcase 2"
                   class="portfolio__img"
                 />
               </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
+              <h3 class="heading-tertiary">Disney Solo</h3>
               <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+                React | React Hooks | Redux
               </p>
               <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
+                Disney Solo is an inspiration by DisneyPlus that allow users to
+                fetch their favorite movies. Active users are able to search for
+                their favorite movies and read about the overview story, similar
+                movies, and play a trailer.
               </p>
               <div class="portfolio__btn">
                 <a
-                  href="https://ticketdream.netlify.com/"
+                  href="https://disneysolo.netlify.com/"
                   class="btn btn--small btn--primary"
                   target="_blank"
                   >Live Demo</a
                 >
                 <a
-                  href="https://github.com/Suonx002/TicketDream"
+                  href="https://github.com/Suonx002/DisneySolo"
                   class="btn btn--small btn--dark"
                   target="_blank"
                   >Source Code</a
                 >
               </div>
             </div>
+
             <div
               class="portfolio__item card"
               data-aos="zoom-in"
@@ -226,149 +236,38 @@
               data-aos-duration="1000"
               data-aos-offset="450"
             >
-              <a href="#" class="showcase__link">
+              <a
+                href="https://slickshop.herokuapp.com/"
+                class="showcase__link"
+                target="_blank"
+              >
                 <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  alt="showcase 1"
+                  src="./img/slickshop.jpg"
+                  alt="showcase 3"
                   class="portfolio__img"
                 />
               </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
+              <h3 class="heading-tertiary">Slick Shop</h3>
               <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+                React | React Hooks | Context API | Semantic UI | Node | Express
+                | MongoDB
               </p>
               <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
+                SlickShop is a full-stack crud application project that mirrors
+                a few of the functionalities. User experience includes the
+                ability to createan account, log in with authentication, create
+                deal postings that can be updated and deleted, and read other
+                available posts.
               </p>
               <div class="portfolio__btn">
                 <a
-                  href="https://ticketdream.netlify.com/"
+                  href="https://slickshop.herokuapp.com/"
                   class="btn btn--small btn--primary"
                   target="_blank"
                   >Live Demo</a
                 >
                 <a
-                  href="https://github.com/Suonx002/TicketDream"
-                  class="btn btn--small btn--dark"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </div>
-            </div>
-            <div
-              class="portfolio__item card"
-              data-aos="zoom-in"
-              data-aos-delay="0"
-              data-aos-duration="1000"
-              data-aos-offset="450"
-            >
-              <a href="#" class="showcase__link">
-                <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  alt="showcase 1"
-                  class="portfolio__img"
-                />
-              </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
-              <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
-              </p>
-              <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
-              </p>
-              <div class="portfolio__btn">
-                <a
-                  href="https://ticketdream.netlify.com/"
-                  class="btn btn--small btn--primary"
-                  target="_blank"
-                  >Live Demo</a
-                >
-                <a
-                  href="https://github.com/Suonx002/TicketDream"
-                  class="btn btn--small btn--dark"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </div>
-            </div>
-            <div
-              class="portfolio__item card"
-              data-aos="zoom-in"
-              data-aos-delay="500"
-              data-aos-duration="1000"
-              data-aos-offset="450"
-            >
-              <a href="#" class="showcase__link">
-                <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  alt="showcase 1"
-                  class="portfolio__img"
-                />
-              </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
-              <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
-              </p>
-              <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
-              </p>
-              <div class="portfolio__btn">
-                <a
-                  href="https://ticketdream.netlify.com/"
-                  class="btn btn--small btn--primary"
-                  target="_blank"
-                  >Live Demo</a
-                >
-                <a
-                  href="https://github.com/Suonx002/TicketDream"
-                  class="btn btn--small btn--dark"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </div>
-            </div>
-            <div
-              class="portfolio__item card"
-              data-aos="zoom-in"
-              data-aos-delay="1000"
-              data-aos-duration="1000"
-              data-aos-offset="450"
-            >
-              <a href="#" class="showcase__link">
-                <img
-                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  alt="showcase 1"
-                  class="portfolio__img"
-                />
-              </a>
-              <h3 class="heading-tertiary">TicketDream</h3>
-              <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
-              </p>
-              <p class="small">
-                TicketDream is an application project inspired by TicketMaster,
-                a ticket sales and distribution company that allows its
-                customers to search for and purchase tickets to concerts,
-                sports, arts, theater and other events.
-              </p>
-              <div class="portfolio__btn">
-                <a
-                  href="https://ticketdream.netlify.com/"
-                  class="btn btn--small btn--primary"
-                  target="_blank"
-                  >Live Demo</a
-                >
-                <a
-                  href="https://github.com/Suonx002/TicketDream"
+                  href="https://github.com/Suonx002/slickShop"
                   class="btn btn--small btn--dark"
                   target="_blank"
                   >Source Code</a
