fix portfolio small section

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
               </a>
               <h3 class="heading-tertiary">Slick Shop</h3>
               <p class="extra-small">
-                React | React Hooks | Context API | Semantic UI | Node | Express
-                | MongoDB
+                React | React Hooks | Context API | Semantic UI | Node | MongoDB
               </p>
               <p class="small">
                 SlickShop is a full-stack crud application project that mirrors
