fixing porfolio descriptions

--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
               </a>
               <h3 class="heading-tertiary">Happy Nails Studio 2</h3>
               <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+                HTML | Sass | Vanilla JavaScript
               </p>
               <p class="small">
                 Happy Nails Studio 2 is a website built with plain html5 and
-                sass for a nail salon business in Lebanon, PA. The user
-                interface is very friendly for customers to view all the
-                services and book an appointment.
+                sass for a nail salon business in Lebanon, PA. The interface is
+                users friendly for customers to view services, book
+                appointmentd, and view contact information.
               </p>
               <div class="portfolio__btn">
                 <a
@@ -208,10 +208,10 @@
                 React | React Hooks | Redux
               </p>
               <p class="small">
-                Disney Solo is an inspiration by DisneyPlus that allow users to
-                fetch their favorite movies. Active users are able to search for
-                their favorite movies and read about the overview story, similar
-                movies, and play a trailer.
+                Disney Solo is inspired by the DisneyPlus application, and
+                allows users to fetch their favorite movies. Active users are
+                able to search for streaming movies, play trailers, and read
+                about the plotline, view similar movies.
               </p>
               <div class="portfolio__btn">
                 <a
@@ -249,7 +249,7 @@
               </a>
               <h3 class="heading-tertiary">Slick Shop</h3>
               <p class="extra-small">
-                React | React Hooks | Context API | Semantic UI | Node | MongoDB
+                React | React Hooks | Semantic UI | Node | MongoDB
               </p>
               <p class="small">
                 SlickShop is a full-stack crud application project that mirrors
