fix typo on appointments on portfolio

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 Happy Nails Studio 2 is a website built with plain html5 and
                 sass for a nail salon business in Lebanon, PA. The interface is
                 users friendly for customers to view services, book
-                appointmentd, and view contact information.
+                appointments, and view contact information.
               </p>
               <div class="portfolio__btn">
                 <a
