fixing more mistakes

--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
               </a>
               <h3 class="heading-tertiary">Happy Nails Studio 2</h3>
               <p class="extra-small">
-                HTML | Sass | Vanilla JavaScript
+                HTML | Sass
               </p>
               <p class="small">
                 Happy Nails Studio 2 is a website built with plain html5 and
                 sass for a nail salon business in Lebanon, PA. The interface is
-                users friendly for customers to view services, book
-                appointments, and view contact information.
+                user friendly for customers to view services, book appointments,
+                and view contact information.
               </p>
               <div class="portfolio__btn">
                 <a
@@ -210,8 +210,8 @@
               <p class="small">
                 Disney Solo is inspired by the DisneyPlus application, and
                 allows users to fetch their favorite movies. Active users are
-                able to search for streaming movies, play trailers, and read
-                about the plotline, view similar movies.
+                able to search for streaming movies, play trailers, read about
+                the plotline, and view similar movies.
               </p>
               <div class="portfolio__btn">
                 <a
